--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   "dependencies": {
     "@wonderlandlabs/propper": "^2.0.5",
     "is": "^3.3.0",
-    "lodash": "^4.17.15"
+    "js-permuter": "^1.0.0",
+    "lodash": "^4.17.15",
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "eslint": "^6.3.0",
     "babel-eslint": "^10.0.3",
-    "eslint-plugin-react-hooks": "^2.1.1",
+    "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.1.1",
     "rollup": "^1.22.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
